--- a/pages/index/components/NavBars/index.wxml
+++ b/pages/index/components/NavBars/index.wxml
@@ -1,7 +1,9 @@
 <!--pages/index/components/NavBars/index.wxml-->
 <view class="menu">
   <view class="menu-item" wx:for="{{channels}}" wx:key="{{item.id}}">
-    <image src="{{item.icon_url}}"></image>
-    <text>{{item.name}}</text>
+    <my-link path="{{item.url}}">
+      <image src="{{item.icon_url}}"></image>
+      <text>{{item.name}}</text>
+    </my-link>
   </view>
 </view>
