--- a/pages/cate/index.wxss
+++ b/pages/cate/index.wxss
@@ -1,1 +1,113 @@
 /* pages/cate/index.wxss */
+.catelog{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  font-size: 30rpx;
+  flex-direction: column;
+}
+
+.cate-wrap{
+  flex: 1;
+  display: flex;
+  border-top: 1rpx solid #f4f4f4;
+  background-color: pink;
+}
+
+.cate-wrap >.cates{
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.cate-wrap > .nav{
+  width: 180rpx;
+  flex-shrink: 0;
+  border-right: 1rpx solid #f4f4f4;
+}
+.nav .cate-item{
+  height: 86rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav .active{
+  color: #b4282d;
+  font-size: 34rpx;
+  box-sizing: border-box;
+  border-left: 4rpx solid #b4282d;
+}
+
+
+.cate-wrap > .cate{
+  flex: 1;
+}
+
+.cate .current {
+  padding: 20rpx;
+  box-sizing: border-box;
+}
+
+.cate .current > .c-banner{
+  width: 100%;
+  height: 192rpx;
+  overflow: hidden;
+  position: relative;
+  border-radius: 4rpx;
+}
+.c-banner > image{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.c-banner > .mask{
+  top: 0;
+  left: 0;
+  color: #ffffff;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  display: flex;
+  position: absolute;
+  object-fit: cover;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0,0,0,0.1);
+}
+
+.c-main >.m-title{
+  height: 108rpx;
+  display: flex;
+  font-size: 28rpx;
+  align-items: center;
+  justify-content: center;
+}
+.c-main >.m-title::before,.c-main >.m-title::after{
+  width: 40rpx;
+  height: 1px;
+  content: "";
+  margin: 0 10rpx;
+  background-color: #d9d9d9;
+}
+
+.c-main >.m-list{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.m-list >.m-item{
+  width: 33.33%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 40rpx;
+  flex-direction: column;
+}
+
+.m-item > image{
+  width: 144rpx;
+  height: 144rpx;
+}
+
+.m-item > text{
+  font-size: 26rpx;
+  margin-top: 10rpx;
+}
