--- a/pages/index/components/Brand2/index.wxml
+++ b/pages/index/components/Brand2/index.wxml
@@ -3,8 +3,8 @@
   <view class="brands">
     <view wx:for="{{brand}}" wx:key="{{item.id}}" class="brand-item">
       <image src="{{item.list_pic_url}}"></image>
-      <text>{{item.name}}</text>
-      <text>￥{{item.retail_price}}</text>
+      <text class="name lines lines-1">{{item.name}}</text>
+      <text class="price">￥{{item.retail_price}}</text>
     </view>
   </view>
 </view>
