--- a/pages/index/components/Brand1/index.wxml
+++ b/pages/index/components/Brand1/index.wxml
@@ -3,11 +3,13 @@
   <text class="title">品牌制造商直供</text>
   <view class="brands">
     <view wx:for="{{brand}}" wx:key="{{item.id}}" class="brand-item">
-      <image src="{{item.new_pic_url}}"></image>
-      <view class="mask">
-        <text>{{item.name}}</text>
-        <text>{{item.floor_price}}元起</text>
-      </view>
+      <navigator url="{{'/pages/brandDetail/index?id=' + item.id}}">
+        <image src="{{item.new_pic_url}}"></image>
+        <view class="mask">
+          <text>{{item.name}}</text>
+          <text>{{item.floor_price}}元起</text>
+        </view>
+      </navigator>
     </view>
   </view>
 </view>
