--- a/pages/index/components/Brand4/index.wxml
+++ b/pages/index/components/Brand4/index.wxml
@@ -4,10 +4,14 @@
   <scroll-view scroll-x class="scroll">
     <view class="brand-list">
       <view wx:for="{{brand}}" wx:key="{{item.id}}" class="brand-item">
-      <image background-size="cover" src="{{item.item_pic_url}}"></image>
-      <view class="title lines lines-1">{{item.title}}<text class="price">￥{{item.price_info}}元起</text></view>
-      <view class="subtitle lines lines-1">{{item.subtitle}}</view>
-    </view>
+        <navigator url="{{'/pages/topicDetail/index?id=' + item.id}}">
+          <image background-size="cover" src="{{item.item_pic_url}}"></image>
+          <view class="title lines lines-1">{{item.title}}
+            <text class="price">￥{{item.price_info}}元起</text>
+          </view>
+          <view class="subtitle lines lines-1">{{item.subtitle}}</view>
+        </navigator>
+      </view>
     </view>
   </scroll-view>
 </view>
