--- a/pages/index/components/Brand5/index.wxml
+++ b/pages/index/components/Brand5/index.wxml
@@ -1,9 +1,11 @@
 <view class="brand-list">
   <view wx:for="{{brand}}" wx:key="{{item.id}}" class="brand-item">
-    <image src="{{item.list_pic_url}}"></image>
-    <view class="name">{{item.name}}</view>
-    <view class="price">
-      ￥{{item.retail_price}}
-    </view>
+    <navigator url="{{'/pages/detail/index?id=' + item.id}}">
+      <image src="{{item.list_pic_url}}"></image>
+      <view class="name">{{item.name}}</view>
+      <view class="price">
+        ￥{{item.retail_price}}
+      </view>
+    </navigator>
   </view>
 </view>
