--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -1,1 +1,62 @@
 /* pages/category/index.wxss */
+.category {
+  flex: 1;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.category >.nav-category {
+  width: 100%;
+  white-space: nowrap;
+  border-bottom: 1rpx solid #f4f4f4;
+}
+
+.nav-category .nav-item {
+  text-align: center;
+  display: inline-block;
+  color: #333;
+  height: 84rpx;  
+  font-size: 30rpx;
+  line-height: 84rpx;
+}
+
+.nav-item view {
+  padding: 0 30rpx;
+}
+
+.nav-item .active {
+  color: #b4282d;
+}
+
+
+.category >.swiper{
+  flex: 1;
+  width: 100%;
+}
+
+.swiper .scroll{
+  height: 100%;
+}
+
+.good-list{
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+}
+.good-item{
+  width: 50%;
+  padding: 20rpx;
+  box-sizing: border-box;
+}
+.good-item image{
+  width: 302rpx;
+  height: 302rpx;
+}
+
+.good-item view{
+  font-size: 28rpx;
+  margin-top: 20rpx;
+  text-align: center;
+}
