--- a/pages/index/components/Brand2/index.wxml
+++ b/pages/index/components/Brand2/index.wxml
@@ -2,9 +2,11 @@
   <text class="title">周一周四 · 新品首发</text>
   <view class="brands">
     <view wx:for="{{brand}}" wx:key="{{item.id}}" class="brand-item">
-      <image src="{{item.list_pic_url}}"></image>
-      <text class="name lines lines-1">{{item.name}}</text>
-      <text class="price">￥{{item.retail_price}}</text>
+      <navigator url="{{'/pages/detail/index?id=' + item.id}}">
+        <image src="{{item.list_pic_url}}"></image>
+        <text class="name lines lines-1">{{item.name}}</text>
+        <text class="price">￥{{item.retail_price}}</text>
+      </navigator>
     </view>
   </view>
 </view>
