--- a/pages/index/components/Brand3/index.wxml
+++ b/pages/index/components/Brand3/index.wxml
@@ -2,15 +2,15 @@
 <view class="brands">
   <text class="title">人气推荐</text>
   <view class="brand-list">
-    <template wx:for="{{brand}}" wx:Key="{{item.id}}">
-      <view bindtap="handleItem" class="brand-item">
+    <view wx:for="{{brand}}" wx:key="{{item.id}}" class="brand-item">
+      <navigator class="link" url="{{'/pages/detail/index?id=' + item.id}}">
         <image src="{{item.list_pic_url}}"></image>
         <view class="info">
           <text class="name lines lines-1">{{item.name}}</text>
           <text class="desc lines lines-2">{{item.goods_brief}}</text>
           <text class="price">￥{{item.retail_price}}</text>
         </view>
-      </view>
-    </template>
+      </navigator>
+    </view>
   </view>
 </view>
